--- a/index.html
+++ b/index.html
@@ -1,13 +1,34 @@
 <!DOCTYPE HTML>
 <html>
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link rel="stylesheet" type="text/css" href="style.css" />
-<script src="javascript.js"></script>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="stylesheet" type="text/css" href="style.css" />
+  <script src="javascript.js"></script>
 </head>
+
 <body>
   <h1>Simon</h1>
+  <div id="game">
+    <div class="row">
+      <div class="wedge" id="green"></div>
+      <div class="wedge" id="red"></div>
+    </div>
+    <div class="row">
+      <div class="wedge" id="blue"></div>
+      <div class="wedge" id="yellow"></div>
+    </div>
+    <div id="controls">
+      <div id="logo">simon</div>
+      <div id="display">!!!</div>
+      <button id="start">start</button>
+      <div id="strict-indicator"></div>
+      <button id="strict">strict</button>
+    </div>
+
+  </div>
 </body>
+
 </html>
