added open and closed classes

--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 <body>
   <div id="game">
     <div class="row">
-      <div class="wedge dark" id="green"></div>
-      <div class="wedge dark" id="red"></div>
+      <div class="wedge dark closed" id="green"></div>
+      <div class="wedge dark closed" id="red"></div>
     </div>
     <div class="row">
-      <div class="wedge dark" id="blue"></div>
-      <div class="wedge dark" id="yellow"></div>
+      <div class="wedge dark closed" id="blue"></div>
+      <div class="wedge dark closed" id="yellow"></div>
     </div>
     <div id="controls">
-      <div id="logo">simon</div>
-      <div id="display"></div>
-      <button id="start" value="off">start</button>
-      <div id="strict-indicator"></div>
-      <button id="strict" value="off">strict</button>
+      <div class="closed" id="logo">simon</div>
+      <div class="closed" id="display"></div>
+      <button class="open" id="start" value="off">start</button>
+      <div class="closed" id="strict-indicator"></div>
+      <button class="open" id="strict" value="off">strict</button>
     </div>
 
   </div>
